# ScreenExtend

./: .gitignore  DEVLOG.md  README.md  fixes.txt  index.html  out.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.fleet/: run.json
.github/workflows/: build-windows.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  self-signed-cert.pem  self-signed-key.pem  tauri.conf.json  tauri.conf.withsidecar.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: ScreenExtend.cer  VirtualDisplayDriver.cat  VirtualDisplayDriver.inf
src-tauri/src/: global_utils.rs  lib.rs  logbus.rs  main.rs  server.rs
src-tauri/src/linux_utils/: compatibility.rs  hosted_network.rs  mod.rs  streamer.rs  virtual_display.rs
src-tauri/src/macos_utils/: compatibility.rs  hostap.m  hosted_network.rs  mod.rs  networking.rs  streamer.rs  virtual_display.rs
src-tauri/src/macos_utils/streamer/: activity.rs  cgds.rs  config.rs  display.rs  encoder.rs  frame.rs  gpu.rs  mach.rs  mod.rs  pipeline.rs  power.rs  qos.rs  sck.rs  tuning.rs
src-tauri/src/streamer/: bitrate.rs  cli.rs  cloud.rs  config.rs  mod.rs  pipeline.rs  platform.rs  server.rs  session.rs  tls.rs  webrtc_session.rs
src-tauri/src/streamer/input/: generic.rs  linux.rs  macos.rs  mod.rs  protocol.rs  scancode.rs  windows.rs
src-tauri/src/streamer/static/: index.html  input.js  styles.css  transform-worker.js
src-tauri/src/streamer/test/: bitrate.rs  mod.rs  whep_selftest.rs
src-tauri/src/windows_utils/: compatibility.rs  device_reporter.rs  hosted_network.rs  mod.rs  networking.rs  virtual_display.rs
src-tauri/src/windows_utils/driver_ipc/: README.md  client.rs  core.rs  driver_client.rs  mock.rs  mod.rs  sync.rs
src-tauri/src/windows_utils/driver_ipc/sync/: client.rs  driver_client.rs
src-tauri/src/windows_utils/streamer/: amd.md  amd.rs  capture.rs  intel.md  intel.rs  mod.rs  pipeline.rs  scaler.rs  tuning.rs
src-tauri/src/windows_utils/streamer/dxgi/: cursor.rs  mod.rs
src-tauri/src/windows_utils/streamer/intel/: encoder.rs  intel_sys.rs  mod.rs
src-tauri/src/windows_utils/streamer/nvidia/: encoder.rs  mod.rs
src-tauri/src/windows_utils/streamer/nvidia/nvenc_sys/: guid.rs  mod.rs  nvEncodeAPI.rs  version.rs
src-tauri/src/windows_utils/streamer/test/: intel_encoder.rs  intel_layout.rs  mod.rs  nvenc_layout.rs  pipeline.rs
src-tauri/src/windows_utils/windows_capture/: capture.rs  d3d11.rs  dxgi_duplication_api.rs  encoder.rs  frame.rs  graphics_capture_api.rs  graphics_capture_picker.rs  monitor.rs  settings.rs  window.rs  winrt.rs
src/components/: auth-provider.tsx  avatar-crop-modal.tsx  config-provider.tsx  global-provider.tsx  guest-login-modal.tsx  log-terminal.tsx  mode-toggle.tsx  profile-menu.tsx  theme-provider.tsx
src/components/pages/: device-details.tsx  register-auth-form.tsx  reset-password-form.tsx  user-auth-form.tsx
src/components/ui/: alert-dialog.tsx  card.tsx  carousel.tsx  checkbox.tsx  dropdown-menu.tsx  input-otp.tsx  input.tsx  label.tsx  resizable.tsx  select.tsx  sheet.tsx  switch.tsx  toaster.tsx  use-toast.ts
src/layout/: auth-layout.tsx  layout.tsx  sidebar.tsx
src/lib/: avatar.ts  bindings.ts  utils.ts  zoom.ts
src/pages/: bootstrap.tsx  dashboard.tsx  devices.tsx  forgot-password.tsx  login.tsx  settings.tsx  signup.tsx  terms.tsx
