[package]
name = "screenextend"
version = "0.1.0"
description = "ScreenExtend"
authors = ["Sarvesh Madullapalli"]
edition = "2021"
categories = ["gui", "os", "network-programming", "multimedia"]
keywords = ["screen-mirror", "desktop-extension", "multi-display", "offline", "free"]
license-file = "../LICENSE"
repository = "https://github.com/ScreenExtend/ScreenExtend"
homepage = "https://screenextend.app/"
documentation = "https://screenextend.app/docs/"
readme = "../README.md"

[lib]
name = "screenextend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "specta"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
specta = "=2.0.0-rc.22"
elevated-command = "1.1"
tokio = { version = "1", features = [ "full" ] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-cli = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
wmi = "0.17.2"
rand = "0.9.1"
tauri-plugin-dialog = "2"
fs4 = { version = "0.13", features = ["sync"] }
# scopeguard = "1.2.0"
# notify = "8.0.0"
# futures = "0.3.31"
# reqwest = { version = "0.12", features = ["json", "blocking"] }
# anyhow = "1.0.98"
anyhow = "1.0"
axum = "0.8"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
bytes = "1"
libloading = "0.9"
local-ip-address = "0.6"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webrtc = "0.17"
log = "0.4.22"
thiserror = "2.0.3"
owo-colors = "4.1.0"
lazy_format = "2.0.3"
joinery = "3.1.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }

[target.'cfg(windows)'.dependencies]
windows-capture = "2"
winreg = "0.52.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Data_Xml_Dom",
    "Devices_Enumeration",
    "Devices_WiFiDirect",
    "Foundation",
    "Foundation_Collections",
    "Networking",
    "Networking_Connectivity",
    "Networking_NetworkOperators",
    "Security_Credentials",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Media",
]
