[package]
name = "screenextend"
version = "0.2.5"
description = "ScreenExtend"
authors = ["Sarvesh Madullapalli"]
edition = "2021"
categories = ["gui", "os", "network-programming", "multimedia"]
keywords = ["screen-mirror", "desktop-extension", "multi-display", "offline", "free"]
license-file = "../LICENSE"
repository = "https://github.com/ScreenExtend/ScreenExtend"
homepage = "https://screenextend.app/"
documentation = "https://screenextend.app/docs/"
readme = "../README.md"

[lib]
name = "screenextend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ScreenExtend"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core + typed command/event gen bindings
tauri = { version = "2", features = ["unstable", "specta"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"

# Tauri plugins
tauri-plugin-cli = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

# HTTP server + TLS
axum = "0.8"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

# WebRTC streaming
webrtc = "0.17"
turn = "0.17"

# Cloud relay control channel
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Utilities
anyhow = "1.0"
bytes = "1"
crossbeam-channel = "0.5"
elevated-command = "1.1"
fs4 = { version = "0.13", features = ["sync"] }
libloading = "0.9"
log = "0.4.22"
rand = "0.9.1"
thiserror = "2.0.3"
wmi = "0.17.2"
whoami = "2.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS capture/encode backend
arc-swap = "1"
crossbeam-channel = "0.5"

# Apple framework bindings
objc2 = "0.6"
libc = "0.2"
block2 = "0.6"
dispatch2 = "0.3"
mach2 = "0.4"
objc2-core-foundation = { version = "0.3", features = [
    "CFBase", "CFCGTypes", "CFDictionary", "CFString", "CFNumber", "CFArray",
] }
objc2-io-surface = { version = "0.3", features = [
    "IOSurface", "IOSurfaceRef", "IOSurfaceTypes", "objc2", "objc2-core-foundation",
] }
objc2-core-graphics = { version = "0.3", features = [
    "CGDisplayStream", "CGDirectDisplay", "CGDisplayConfiguration", "CGError",
    "block2", "dispatch2", "objc2-io-surface",
] }
objc2-core-video = { version = "0.3", features = [
    "CVBase", "CVReturn", "CVBuffer", "CVImageBuffer", "CVPixelBuffer",
    "CVPixelBufferIOSurface", "objc2-io-surface",
] }
objc2-core-media = { version = "0.3", features = [
    "CMBase", "CMTime", "CMSampleBuffer", "CMFormatDescription", "CMBlockBuffer",
] }
objc2-video-toolbox = { version = "0.3", features = [
    "VTBase", "VTErrors", "VTSession", "VTCompressionSession", "VTCompressionProperties",
    "objc2-core-media", "objc2-core-video",
] }
objc2-foundation = { version = "0.3", features = [
    "NSProcessInfo", "NSString", "NSObjCRuntime", "NSArray",
] }
objc2-core-wlan = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
windows-future = "0.3.2"
parking_lot = "0.12.5"
rayon = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Direct3D11",
    "Security_Cryptography",
    "Win32_Devices_Display",
    "Win32_System_WinRT_Graphics_Capture",
    "Networking",
    "Win32_System_LibraryLoader",
    "System",
    "Media_MediaProperties",
    "Win32_Graphics_Dxgi",
    "Win32_System_Ole",
    "Security_Credentials",
    "Devices_WiFiDirect",
    "Networking_Connectivity",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Storage",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Graphics_Capture",
    "Win32_Graphics_Direct3D",
    "Graphics_DirectX_Direct3D11",
    "Media_Transcoding",
    "Win32_UI_Shell",
    "Graphics_Imaging",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_UI_HiDpi",
    "Networking_NetworkOperators",
    "Storage_Streams",
    "Data_Xml_Dom",
    "Devices_Radios",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
    "Devices_Enumeration",
    "Win32_Graphics_Dwm",
    "Foundation_Metadata",
    "System_Threading",
    "Foundation",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Media_Core",
    "Win32_System_Power",
]

[profile.dev.package.objc2]
debug-assertions = false
